--- a/END-OF-PHASE-1-PROJECT/index.html
+++ b/END-OF-PHASE-1-PROJECT/index.html
@@ -15,6 +15,13 @@
       </div>
     </div>
     <div class="container">
+      <!-- Video -->
+
+      <video autoplay loop muted plays-inline>
+        <source src="assets/connect.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+
       <div class="content">
         <!-- Add contact form on the left -->
         <div class="add-form">
@@ -69,7 +76,7 @@
           <form id="editContactForm">
             <input type="hidden" id="editId" />
 
-            <label for="editName">Name:</label> 
+            <label for="editName">Name:</label>
             <input
               class="input-edit"
               type="text"
